fix: keep editor tabs buttons visible

--- a/client/src/templates/Challenges/classic/classic.css
+++ b/client/src/templates/Challenges/classic/classic.css
@@ -67,7 +67,7 @@
 }
 
 .monaco-editor-tabs {
-  display: flex;
+  display: flex !important;
   margin-inline-end: auto;
 }
 
